连接了PDF播放和列表

--- a/app/src/main/res/layout/file_list_item.xml
+++ b/app/src/main/res/layout/file_list_item.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_height="68dp"
     android:id="@+id/file_list_item"
-    android:paddingRight="10dp"
     android:paddingLeft="10dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
     <ImageView
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/item_img"
         android:layout_alignParentLeft="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearance"
         android:id="@+id/item_title" />
 </LinearLayout>
